# multiplayer

./: .gitignore  README.md
client/: astar.py  game_pb2.py  game_pb2_grpc.py  generate_grpc.bat  generate_grpc.sh  geometry.py  main.py  map.py  npc.py  player.py  requirements.txt  world.py
server/: Cargo.toml  build.rs
server/proto/: game.proto
server/src/: map.rs  server.rs
