[package]
name = "server"
version = "0.1.0"
authors = ["Peter Nelson <peter@peterdn.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
rand = "0.7.3"

[build-dependencies]
tonic-build = "0.2"
